Changelog
=========

SVN UNRELEASE
-------------

* added "Uninstall" in uninstall profile registration for a better GenericSetup visibility in ZMI

* added minimal framework for tests

* added a minimal doctest (that was broken)

* fix zope2 initialization (minor refactoring) to make doctests working

* Added 2 Archetypes Schemata patches to avoid errors when reordering fields with
  an external schema extender (IOrderableSchemaExtender) applied to the schema
  with multilingual fields inside.

* Added validation_required, a simple validation for required
  multilingual fields.

* Some refactoring to make code more clear :
  - put monkey patches in patches folder
  - put different patches in different files
  - added Log whith patches
  - put MultiLanguageAware in a separate file (proxy.py)

* Added samples types and specific profile for tests

* Added doctests on multilingual fields and catalog search 
  

0.6 - (2010-01-29)
------------------

* changed criterion indices registration to avoid warning messages on startup

0.5 - (2010-01-28)
------------------

* bugfix in multilanguage ZCTextIndex where index setter set the same value for indexes of all languages

0.4 - (2010-01-28)
------------------

* added support for multilanguage image fields

0.3 - (2010-01-26)
------------------

* added default atct indices to new criterion registrations as the old ones are overwritten
* added multilanguageindexes to atct criterion registry
* fixed UnicodeEncodeError in CatalogBrain monkey patch

0.2 - (2009-12-02)
------------------

* Added README.txt
* Metadata of catalog brains now contains value of current language rather than a MultilanguageAware object (fixes issues when converting to unicode)
* Added attribute access

0.1 - (2009-10-30)
------------------

* Initial release
